src/objects/OpportunitySchedule__c.object
<CustomObject>
    <description>Opportunity Schedule</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frozen_Oppty_Sched_Qty__c</fullName>
        <label>Frozen Oppty Sched Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Schedules</relationshipLabel>
        <relationshipName>Opportunity_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Oppty_Sched_Qty__c</fullName>
        <label>Oppty Sched Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sched_Date_Check__c</fullName>
        <formula>IF((Opportunity__r.Production_Date__c - Sched_Date__c) &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sched Date Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sched_Date__c</fullName>
        <label>Sched Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sched_Qtr__c</fullName>
        <description>Quarter of the sched date</description>
        <formula>TEXT(CEILING(MONTH(Sched_Date__c) / 3))</formula>
        <label>Sched Qtr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sched_Year_Qtr__c</fullName>
        <description>Year quarter of the sched date</description>
        <formula>Sched_Year__c &amp; &quot;Q&quot; &amp; Sched_Qtr__c</formula>
        <label>Sched Year Qtr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sched_Year__c</fullName>
        <description>Year of the sched date</description>
        <formula>TEXT(YEAR(Sched_Date__c))</formula>
        <label>Sched Year</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Schedule</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Opportunity Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Frozen_Oppty_Sched_Qty_Positive</fullName>
        <active>true</active>
        <description>Frozen Oppty Sched Qty must be equal or greater than 0.</description>
        <errorConditionFormula>Frozen_Oppty_Sched_Qty__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Frozen_Oppty_Sched_Qty__c</errorDisplayField>
        <errorMessage>Frozen Oppty Sched Qty must be equal or greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Oppty_Sched_Qty_Positive</fullName>
        <active>true</active>
        <description>Oppty Sched Qty must be equal or greater than 0.</description>
        <errorConditionFormula>AND(
 Oppty_Sched_Qty__c &lt; 0
)</errorConditionFormula>
        <errorDisplayField>Oppty_Sched_Qty__c</errorDisplayField>
        <errorMessage>Oppty Sched Qty must be equal or greater than 0.</errorMessage>
    </validationRules>
</CustomObject>